styling the driver cards

--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -2,7 +2,7 @@
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
-  <table class="table constructorable">
+  <table class="table constructorable table-striped table-bordered table-hover table-condensed">
     <tr>
       <td colspan="2"><h3>{{team.StandingsLists[0].ConstructorStandings[0].Constructor.name}}</h3></td>
     </tr>
