basic news aggregator

--- a/partials/news.html
+++ b/partials/news.html
@@ -1,6 +1,5 @@
 
-Coming Soon
-<!-- <div ng-hide="content_loaded">
+<div ng-hide="content_loaded">
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
@@ -14,4 +13,4 @@ Coming Soon
       <td><a target="_blank" ng-href="{{article.unescapedUrl}}"/>{{article.publisher}}</td>
     </tr>
   </table>
-</div> -->
+</div>
