--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -22,7 +22,7 @@
     </tr>
     <tr ng-repeat="driver in drivers.DriverStandings">
       <td>{{driver.position}}</td>
-      <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
+      <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
       <td>{{driver.points}}</td>
       <td>{{driver.wins}}</td>
       <td><a ui-sref="viewConstructor({id:driver.Constructors[0].constructorId})">{{driver.Constructors[0].name}}</td>
