--- a/partials/circuit-view.html
+++ b/partials/circuit-view.html
@@ -2,8 +2,5 @@
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
-
-  <div ng-bind-html="circuit.details">
-
-  </div>
+  <div ng-bind-html="circuit.details"></div>
 </div>
