added location details to results view

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -24,6 +24,7 @@
         <span class="divider"> .:. </span> {{ results.Races[0].raceName }}</h3>
       </td>
     </tr>
+    <tr><td>{{ results.Races[0].Circuit.circuitName }}, {{ results.Races[0].Circuit.Location.country }}</td></tr>
   </table>
 
   <div class="btn-group" opt-kind ok-key="sortBy">
