--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
   font-weight: bold;
   color: #8585AD;
   width: 100%;
-  display: inline-block;
+  /*display: inline-block;*/
   margin: 0px;
   height: 100px;
 }
