added constructor to results

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -50,6 +50,8 @@
         <p class="lastName"><a ui-sref="viewDriver({id:race.Driver.driverId})">{{race.Driver.familyName}}</a></p>
         <p class="firstName">{{race.Driver.givenName}}</p>
         <hr/>
+        <p class="status">{{race.Constructor.name}}</p>
+        <hr/>
         <p class="status">{{race.status}}</p>
         <p class="raceTime">{{race.Time.time}}</p>
 
