formatted constructor on results

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -50,7 +50,7 @@
         <p class="lastName"><a ui-sref="viewDriver({id:race.Driver.driverId})">{{race.Driver.familyName}}</a></p>
         <p class="firstName">{{race.Driver.givenName}}</p>
         <hr/>
-        <p class="status">{{race.Constructor.name}}</p>
+        <p class="lastName centerMe"><a ui-sref="viewConstructor({id:race.Constructor.constructorId})">{{race.Constructor.name}}</a></p>
         <hr/>
         <p class="status">{{race.status}}</p>
         <p class="raceTime">{{race.Time.time}}</p>
