added promises ready to combine race results with qualifying details

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -29,8 +29,10 @@
 
   <div class="btn-group" opt-kind ok-key="sortBy">
     <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
-    <button type="button" class="btn btn-default" ok-sel="[grid]" ok-type="integer" disabled>Starting Grid</button>
-    <button type="button" class="btn btn-default" ok-sel="[practice]" ok-type="integer" disabled>Qualifier</button>
+    <button type="button" class="btn btn-default" ok-sel="[grid]" ok-type="integer">Starting Grid</button>
+    <button type="button" class="btn btn-default" ok-sel="[fastestLap]" ok-type="integer">Fastest Lap</button>
+    <button type="button" class="btn btn-default" ok-sel="[AvgSpeed]" ok-type="integer">Average Speed</button>
+<!--     <button type="button" class="btn btn-default" ok-sel="[practice]" ok-type="integer" disabled>Qualifier</button> -->
 <!--     <button type="button" class="btn btn-default" ok-sel="[number]" ok-type="integer">Practice</button> -->
   </div>
 
