--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -59,6 +59,7 @@
 
         <p>Fastest Lap ({{race.FastestLap.lap}}) - {{race.FastestLap.Time.time}}</p>
         <p>Avg Speed: {{race.FastestLap.AverageSpeed.speed}} {{race.FastestLap.AverageSpeed.units}}</p>
+        <p>Grid: {{race.grid}}</p>
       </div>
     </div>
   </div>
