building weather logic

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -20,7 +20,7 @@
     </tr>
     <tr ng-repeat="race in schedule.Races">
       <td>{{race.round}} </td>
-      <td>{{race.raceName}}<br/><a ui-sref="viewCircuit({id: race.Circuit.circuitId})">{{race.Circuit.circuitName}}</a><br/>{{race | formatDateTime}}</td>
+      <td>{{race.raceName}}<br/><a ui-sref="viewCircuit({id: race.Circuit.circuitId})">{{race.Circuit.circuitName}}</a><br/>{{race | formatDateTime}}<span ng-if="race.upcoming == true"><br/>{{weatherForecast}}</span></td>
       <td><a target="_blank" ng-href="{{race.url}}"/>Wiki Link</td>
       <td ng-if="race.date == currentDate"><i>Awaiting Results</i></td>
       <td ng-if="race.date > currentDate"><i>Coming Soon</i></td>
