--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,10 @@ body {
   text-shadow: 0 0 2px #000, 0 0 2px #000;
 }
 
+.raceForecast {
+  border: 1px blue solid;
+}
+
 .footer {
   background-color: #333;
   height: 40px;
