added weather icon

--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -19,7 +19,7 @@
     </tr>
     <tr>
       <td>Forecast:</td>
-      <td class="raceForecast">{{weatherForecast.temp.day}}&deg;C {{weatherForecast.weather[0].description}}</td>
+      <td class="raceForecast"><img class="img-responsive img-thumbnail" ng-src="{{ weatherForecast.icon }}" />  {{weatherForecast.temp.day}}&deg;C {{weatherForecast.weather[0].description}}</td>
     </tr>
   </table>  
 
