--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -12,7 +12,7 @@
       </ul>
     </span></h3>
 
-  <table class="table table-bordered">
+  <table class="table table-bordered" ng-hide="hideNextRace">
     <tr>
       <td>Next Race:</td>
       <td>{{nextRace.raceName}}, {{timeToRace}}</td>
