--- a/partials/circuits.html
+++ b/partials/circuits.html
@@ -12,7 +12,7 @@
       </ul>
     </span></h3>
 
-  <table class="table table-striped table-bordered table-hover table-condensed">
+  <table class="table table-striped table-bordered table-condensed">
     <tr>
       <th>Name</th>
       <th>Country</th>
