--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -88,7 +88,7 @@
     </tr>
   </table>  
 
-  <table class="table table-striped table-bordered table-hover table-condensed">
+  <table class="table table-striped table-bordered table-condensed">
     <tr>
       <th>Round</th>
       <th>Name / Circuit / Date</th>
