tweak to date display for forecast

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -35,10 +35,10 @@
   </table>
 </div>
 
-<!-- <canvas id="line" class="chart chart-line" data="chartData"
+<canvas id="line" class="chart chart-line" data="chartData"
   labels="chartLabels" legend="true" series="series"
   click="onClick">
-</canvas>  -->
+</canvas> 
 
 <div ng-show="content_loaded">
   <div class="btn-group" opt-kind ok-key="sortBy">
