removed the charts till ready

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -35,11 +35,11 @@
   </table>
 </div>
 
-<canvas id="line" class="chart chart-line" data="chartData"
+<!-- <canvas id="line" class="chart chart-line" data="chartData"
   labels="chartLabels" legend="true" series="series"
   click="onClick">
 </canvas> 
-
+ -->
 <div ng-show="content_loaded">
   <div class="btn-group" opt-kind ok-key="sortBy">
     <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
