added lap times

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -35,11 +35,13 @@
   </table>
 </div>
 
-<!-- <canvas id="line" class="chart chart-line" data="chartData"
+<hr/>
+<h4>Lap Times (secs)</h4>
+<canvas id="line" class="chart chart-line" data="chartData"
   labels="chartLabels" legend="true" series="series"
   click="onClick">
 </canvas> 
- -->
+<hr/>
 <div ng-show="content_loaded">
   <div class="btn-group" opt-kind ok-key="sortBy">
     <button type="button" class="btn btn-default active" ok-sel="[position]">Race Results</button>
