chart style tweak

--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -38,7 +38,7 @@
 <hr/>
 <h4>Lap Times (secs)</h4>
 <canvas id="line" class="chart chart-line" data="chartData"
-  labels="chartLabels" legend="true" series="series"
+  labels="chartLabels" legend="true" series="series" options="options"
   click="onClick">
 </canvas> 
 <hr/>
