full list of points history, order by most recent

--- a/partials/constructor-view.html
+++ b/partials/constructor-view.html
@@ -13,7 +13,7 @@
       <td><a target="_blank" ng-href="{{team.StandingsLists[0].ConstructorStandings[0].Constructor.url}}"/>Wiki Link</td>
     </tr>
   </table>
-  <table class="table constructorable table-striped table-bordered table-hover table-condensed">
+  <table class="table constructorable table-striped table-bordered table-condensed">
     <tr>
       <th>Season</th>
       <th>Rounds</th>
