--- a/partials/driver-view.html
+++ b/partials/driver-view.html
@@ -2,7 +2,7 @@
   Just grabbing your data...
 </div>
 <div ng-show="content_loaded">
-  <table class="table drivertable table-striped table-bordered table-hover table-condensed">
+  <table class="table drivertable table-striped table-bordered table-condensed">
     <tr>
       <td><h2><span class="lastName">{{driver.familyName}}</span><br/>
         <span class="firstName">{{driver.givenName}}&nbsp;&nbsp;<img ng-src="{{driver.flagUrl}}" alt="{{driver.nationality}}" /></span></h2></td>
@@ -10,7 +10,7 @@
     <tr><td><img class="img-responsive center-block img-thumbnail" ng-src="{{ driver.imageUrl }}" /></td></tr>
     <tr><td>{{driver.Age}} years old .:. {{driver.dateOfBirth | date:'MMM d, y'}}</td></tr>
     <tr>
-      <td>Driver Number<span class="driverNo">{{driver.permanentNumber}}</span></td>
+      <td>Driver Number<span class="driverNo">{{driver.permanentNumber}} - {{driver.code}}</span></td>
     </tr>
     <tr>
       <td><a target="_blank" ng-href="{{driver.url}}"/>Wiki Link</td>
