--- a/partials/result-view.html
+++ b/partials/result-view.html
@@ -38,7 +38,7 @@
 <hr/>
 <h4>Lap Times (secs)</h4>
 <div ng-hide="chartLoaded">
-  <img src="./images/loading.gif">
+  <img width="300px" src="./images/loading.gif">
 </div>
 <canvas id="line" class="chart chart-line" data="chartData"
   labels="chartLabels" legend="true" series="series" options="options"
