--- a/partials/schedule.html
+++ b/partials/schedule.html
@@ -64,7 +64,7 @@
       </td>
     </tr>
     <tr ng-show="weather_loaded">
-      <td>Race:<br/><i>{{weatherForecast.dateText}}<sup>{{weatherForecast.dateTextSuper}}</sup></i></td>
+      <td>Weekend Forecast:<br/><i>{{weatherForecast.dateText}}<sup>{{weatherForecast.dateTextSuper}}</sup></i></td>
       <td class="raceForecast">
         <div class="weatherTile">
           <img ng-src="{{ weatherForecast.icon }}" />
