--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -23,7 +23,7 @@
     </tr>
     <tr ng-repeat="driver in drivers.DriverStandings">
       <td>{{driver.position}}</td>
-      <td><img ng-src="http://jewkesy.github.io/colloquial/images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
+      <td><img ng-src="./images/flags/{{driver.Driver.nationality}}.png" alt="{{driver.Driver.nationality}}" /> <a ui-sref="viewDriver({id:driver.Driver.driverId, points:driver.points})">{{driver.Driver.givenName}} {{driver.Driver.familyName}}</a></td>
       <td>{{driver.Driver.code}}</td>
       <td>{{driver.points}}</td>
       <td>{{driver.wins}}</td>
