--- a/partials/drivers.html
+++ b/partials/drivers.html
@@ -1,7 +1,6 @@
-<div ng-hide="content_loaded">
-  Just grabbing your data...
-</div>
-<div ng-show="content_loaded">
+
+
+
   <h3>Driver Standings<span class="divider"> .:. </span>
     <span class="dropdown">
       <a class="btn btn-default" data-toggle="dropdown" href="/drivers">{{ season }} <b class="caret"></b></a>
@@ -11,7 +10,14 @@
         </li>
       </ul>
     </span></h3>
-
+    <canvas id="bar" class="chart chart-bar" data="chartData"
+    labels="chartLabels" legend="true" series="chartSeries" options="chartOptions"
+    click="onClick">
+  </canvas>
+  <div ng-hide="content_loaded">
+  Just grabbing your data...
+</div>
+  <div ng-show="content_loaded">
   <table class="table table-striped table-bordered table-condensed">
     <tr>
       <th>Position</th>
